# time-keeper

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: api.rs  data.rs  db.rs  errors.rs  main.rs  services.rs  sql.rs  types.rs  utils.rs
backend/src/api/: authed.rs  general.rs  login.rs  register.rs
backend/src/api/authed/: categories.rs  category.rs  category_alias.rs  category_setting.rs  create.rs  create_category.rs  get.rs  get_category.rs  logout.rs  record.rs  update.rs
backend/src/api/general/: login.rs  refresh.rs  register.rs
backend/src/data/: authenticate.rs  category.rs  connector.rs
backend/src/services/: category_service.rs  category_setting_service.rs  create_category_service.rs  get_category_service.rs  login_service.rs  logout_service.rs  refresh_service.rs  register_service.rs  table_setting_service.rs  update_service.rs  user_service.rs
backend/src/sql/: get.rs  insert.rs  update.rs
backend/src/sql/get/: get_category.rs  get_category_setting.rs  get_refresh_token.rs  get_table_setting.rs  get_user.rs
backend/src/sql/insert/: create_alias.rs  create_category.rs  create_refresh_token.rs  create_user.rs
backend/src/sql/update/: update_category_setting.rs  update_login_footprint.rs  update_refresh_token.rs  update_table_setting.rs  update_user.rs
backend/src/types/: api.rs  db.rs  token.rs
backend/src/types/api/: category.rs  create_category.rs  login.rs  logout.rs  record.rs  (+4 more)
backend/src/utils/: api.rs  error.rs  header.rs  json.rs  middleware.rs  password.rs  regex.rs  response.rs  sql.rs  token.rs  types.rs  uuid.rs
(+155 files in other folders)
