[package]
name = "worktime-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures-util = "0.3"
jsonwebtoken = "9"
log = "0.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
regex = "1"
uuid = { version = "1", features = ["v4"] }